--- a/styles/style.css
+++ b/styles/style.css
@@ -192,8 +192,8 @@ html {
   display: block;
   margin: 10px;
   float: left;
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 20px;
 }
 .colors_drag_images {
   display: grid;
@@ -201,7 +201,7 @@ html {
   height: 130px;
   width: 100vw;
   justify-content: center;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
 }
 .colors_drop_images{
   display: grid;
@@ -224,11 +224,7 @@ html {
   transform: scale(1.1);
   filter: drop-shadow(8px 8px 10px rgb(221, 173, 101));
 }
-.invisible {
-  display: none;
-}
 .overlay {
-  /* display: none; */
   display: flex;
   position: fixed;
   left: 0;
@@ -247,10 +243,31 @@ html {
   letter-spacing: 8px;
   z-index: 100;
   overflow: hidden;
-
   align-items: center;
   justify-content: center;
+  transition: 0.3s;
 }
+.balloonsContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100vw;
+
+}
+#balloons {
+  position: relative;
+  display: flex;
+}
+#balloons span {
+  display: flex;
+  position: relative;
+
+  margin: 10px;
+  width: 70px;
+  height: 120px;
+}
+
 /*end colors page*/
 
 
