--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,8 @@ html {
   font-size: 16px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 @font-face {
   font-family: 'Georgia';
   src: url('assets/fonts/Georgia/Georgia-Bold.eot');
@@ -243,7 +245,8 @@ html {
 }
 
 .overlay {
-  display: flex;
+  /* display: flex; */
+  display: none;
   position: fixed;
   left: 0;
   top: 0;
@@ -251,6 +254,7 @@ html {
   height: 100vh;
   margin: 0 auto;
   background-color: rgba(170, 167, 167, 0.5);
+  font-family: 'Permanent Marker', cursive;
   font-size: 70px;
   background-size: cover;
   color:aqua;
@@ -263,9 +267,14 @@ html {
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  /* transition: background-color 500ms, font-size 500ms;
-  transition: overlay-grow 500ms forwards; */
+  /* transition: background-color 500ms, font-size 500ms; */
+  /*transition: overlay-grow 500ms forwards; */
   transform: translateZ(0);
+}
+
+.overlay1.visible {
+  display: flex;
+  animation: overlay-grow 500ms forwards;
 }
 
 @keyframes overlay-grow {
@@ -274,7 +283,7 @@ html {
     font-size: 0;
   }
   to {
-    background-color: rgba(170, 166, 154, 0.5);
+    background-color: rgba(173, 146, 131, 0.596);
     font-size: 70px;
   }
 }
@@ -422,7 +431,7 @@ html {
 
 .cards_container {
   display: grid;
-  grid-template-columns: repeat(6, auto);
+  grid-template-columns: repeat(7, auto);
   grid-gap: 20px;
   margin: 20px auto;
   align-items: center;
@@ -432,8 +441,8 @@ html {
 
 .card {
   position: relative;
-  width: 180px;
-  height: 180px;
+  width: 150px;
+  height: 150px;
   cursor: pointer;
 }
 
@@ -453,16 +462,16 @@ html {
 }
 
 .bubble {
-  width: 180px;
+  width: 150px;
 }
 
 .animal {
-  width: 130px;
   position: absolute;
+  width: 120px;
 }
 
 .back_image {
-  width: 180px;
+  width: 150px;
   filter: drop-shadow(8px 8px 10px rgb(41, 38, 35));
 }
 
@@ -499,6 +508,46 @@ html {
 .card:hover .card_front .animal {
   /* animation: dance 1s linear infinite 500ms; */
   animation: dance1 1s linear infinite 500ms;
+}
+
+.overlay1 {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
+  font-family: 'Permanent Marker', cursive;
+  background-size: cover;
+  color:aqua;
+  text-shadow: 0 2px 0 rgb(85, 80, 80);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: 8px;
+  z-index: 1000;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  /* transition: background-color 500ms, font-size 500ms; */
+  transform: translateZ(0);
+}
+.overlay1.visible {
+  display: flex;
+  animation: overlay-grow 500ms forwards;
+}
+@keyframes overlay-grow {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 0;
+  }
+  to {
+    background-color: rgba(173, 146, 131, 0.596);
+    font-size: 70px;
+  }
 }
 
 @keyframes dance {
