--- a/styles/style.css
+++ b/styles/style.css
@@ -527,25 +527,13 @@ html {
   transform: rotateY(0);
 }
 
-/* .card.visible .card_front .animal {
-  animation: dance1 1.5s linear infinite 500ms;
-} */
+.card.visible .card_front .animal {
+  animation: dance2 1.5s linear infinite 500ms;
+}
 
 .card.matched .card_front .animal {
-  animation: dance2 1s linear infinite 500ms;
-}
-
-/* .card:hover .card_back {
-  transform: rotateY(-180deg);
-}
-
-.card:hover .card_front {
-  transform: rotateY(0);
-}
-
-.card:hover .card_front .animal {
   animation: dance1 1s linear infinite 500ms;
-} */
+}
 
 .overlay1 {
   display: none;
