--- a/styles/amedia.css
+++ b/styles/amedia.css
@@ -28,11 +28,27 @@
     width: 150px;
   }
 }
+@media only screen and (max-width:1000px) {
+  /*logic page*/
+  .card {
+    width: 130px;
+    height: 130px;
+  }
+  .bubble {
+    width: 130px;
+  }
+  .animal {
+    width: 110px;
+  }
+  .back_image {
+    width: 130px;
+  }
+}
 
 @media only screen and (max-width:840px) {
   /*logic page*/
   .cards_container {
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(4, auto);
     grid-gap: 15px;
   }
   .card {
@@ -53,7 +69,7 @@
 @media only screen and (max-width:540px) {
   /*logic page*/
   .cards_container {
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(3, auto);
     grid-gap: 15px;
   }
   .card {
